--- a/termini.html
+++ b/termini.html
@@ -243,8 +243,10 @@
            </a>
        </div>
        <div class="container">
+          
            <img src="logobianco.png" alt="Logo Biblioteche di Roma">
-           <img class="logo-morante" src="https://github.com/bibliotecamorante/donazione/raw/main/logomorante.png" alt="Logo Biblioteca Morante">
+           <img class="logo-morante" src="logomorante.png" alt="Logo Biblioteca Morante">
+
        </div>
    </header>
 
