--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 
         
       <!-- Header container with vertical layout -->
-<div class="flex flex-col items-center justify-center mb-6 text-center space-y-3 px-2">
-    <div class="flex flex-col sm:flex-row items-center justify-center gap-2 sm:gap-8">
+
+        
+<!-- Header container with improved mobile responsiveness -->
+<div class="flex flex-col items-center justify-center mb-4 text-center space-y-2 px-2">
+    <div class="flex flex-row items-center justify-center gap-4 sm:gap-8">
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
             alt="Logo Biblioteca" 
-            class="h-24 w-auto object-contain sm:h-16 md:h-20" />
+            class="h-12 w-auto object-contain sm:h-16 md:h-20" />
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
             alt="Logo Morante" 
-            class="h-56 w-auto object-contain sm:h-40 md:h-48" />
+            class="h-24 w-auto object-contain sm:h-40 md:h-48" />
     </div>
-    <h1 class="text-3xl sm:text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center">
+    <h1 class="text-xl sm:text-2xl md:text-3xl text-slate-700 font-bold leading-tight text-center">
         Donazione alla Biblioteca Elsa Morante
     </h1>
 </div>
