--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             alt="Logo Morante" 
             class="h-24 w-auto object-contain sm:h-40 md:h-48" />
     </div>
-    <h1 class="text-xl sm:text-2xl md:text-3xl text-slate-700 font-bold leading-tight text-center px-2">
-        Donazione<br class="sm:hidden"> alla Biblioteca<br class="sm:hidden"> Elsa Morante
+     <h1 class="text-xl sm:text-2xl md:text-3xl text-slate-700 font-bold leading-tight text-center">
+        Donazione alla Biblioteca Elsa Morante
     </h1>
 </div>
 
