--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
 
 <!-- Header container with improved mobile responsiveness -->
-<!-- Header container with improved mobile responsiveness -->
 <div class="flex flex-col items-center justify-center mb-2 text-center space-y-1 px-2 mt-0">
     <div class="flex flex-row items-center justify-center gap-0.5 sm:gap-1">
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
             alt="Logo Biblioteca" 
-            class="h-10 w-auto object-contain sm:h-16 md:h-20" />
+            class="h-10 w-auto object-contain sm:h-16 md:h-20 ml-2" />
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
             alt="Logo Morante" 
