--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         
 
 
-<!-- Header container with improved mobile responsiveness -->
+<!-- Header container with improved logo positioning -->
 <div class="flex flex-col items-center justify-center mb-2 text-center space-y-1 px-2 mt-0">
     <div class="flex flex-row items-center justify-center gap-0.5 sm:gap-1">
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
             alt="Logo Biblioteca" 
-            class="h-10 w-auto object-contain sm:h-16 md:h-20 ml-4" />
+            class="h-8 w-auto object-contain sm:h-12 md:h-14 ml-2" />
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
             alt="Logo Morante" 
-            class="h-24 w-auto object-contain sm:h-40 md:h-48" />
+            class="h-20 w-auto object-contain sm:h-32 md:h-36" />
     </div>
     <h1 class="text-xl sm:text-2xl md:text-3xl text-slate-700 font-bold leading-tight text-center">
         Donazione alla Biblioteca Elsa Morante
