--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 <body class="bg-gray-100 text-gray-800 leading-relaxed p-5">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
+        <!-- Logos moved to the top -->
+        <div class="flex flex-col items-center justify-center mb-6 text-center space-y-4">
+            <div class="flex flex-row items-center justify-center gap-2">
+                <img 
+                    src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
+                    alt="Logo Biblioteca" 
+                    class="h-12 w-auto object-contain" />
+                <img 
+                    src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
+                    alt="Logo Morante" 
+                    class="h-24 w-auto object-contain" />
+            </div>
+        </div>
         
         <div class="bg-blue-50 border-l-6 border-blue-600 p-5 mb-6 rounded-r-lg flex items-center">
             <div class="mr-4">
