--- a/index.html
+++ b/index.html
@@ -9,17 +9,34 @@
 </head>
 <body class="bg-gray-100 text-gray-800 leading-relaxed p-5">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
-        <!-- Logos moved to the top -->
+        <!-- Logos moved to the top, enlarged -->
         <div class="flex flex-col items-center justify-center mb-6 text-center space-y-4">
-            <div class="flex flex-row items-center justify-center gap-2">
+            <div class="flex flex-row items-center justify-center gap-4">
                 <img 
                     src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
                     alt="Logo Biblioteca" 
-                    class="h-12 w-auto object-contain" />
+                    class="h-20 w-auto object-contain" />
                 <img 
                     src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
                     alt="Logo Morante" 
-                    class="h-24 w-auto object-contain" />
+                    class="h-40 w-auto object-contain" />
+            </div>
+        </div>
+        
+        <div class="bg-blue-50 border-l-6 border-blue-600 p-5 mb-6 rounded-r-lg flex items-center">
+            <div class="mr-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.168.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                </svg>
+            </div>
+            <div>
+                <h1 class="text-2xl sm:text-3xl md:text-4xl font-extrabold text-blue-800 mb-2 leading-tight">
+                    Donazione alla Biblioteca Elsa Morante
+                </h1>
+                <p class="text-base sm:text-lg text-slate-700 leading-relaxed">
+                    Compila il modulo per donare i tuoi libri alla biblioteca. 
+                    <span class="font-bold text-red-600">* I campi contrassegnati con asterisco sono obbligatori</span>
+                </p>
             </div>
         </div>
         
