--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        class="h-12 sm:h-16 md:h-20" />
+        class="h-[100px]" style="width: 402px;" />
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        class="h-auto" style="width: 400px; height: auto;" />
+        class="h-[100px]" style="width: 223px;" />
 </div>
+
 
 
 
