--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        class="h-[80px]" style="width: 322px;" />
+        class="h-[272px]" />
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        class="h-[80px]" style="width: 179px;" />
+        class="h-[272px]" />
 </div>
 
 
