--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        class="h-[272px]" />
+        class="h-[272px] max-w-[800px]" />
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
         class="h-[272px]" />
 </div>
+
 
 
 
