--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        class="h-[272px] max-w-[800px]" />
+        style="height: 272px; width: auto;" />
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        class="h-[272px]" />
+        style="height: 272px; width: auto;" />
 </div>
 
 
