--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        style="height: 272px; width: auto;" />
+        style="width: 400px; height: auto;" /> <!-- Larghezza ridotta -->
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        style="height: 272px; width: auto;" />
+        style="height: 320px; width: auto;" /> <!-- Altezza aumentata -->
 </div>
-
-
 
 
 
