--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        style="width: 400px; height: auto;" /> <!-- Larghezza ridotta -->
+        style="width: 200px; height: auto;" /> <!-- Dimensioni molto ridotte -->
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        style="height: 320px; width: auto;" /> <!-- Altezza aumentata -->
+        style="height: 400px; width: auto;" /> <!-- Dimensioni molto aumentate -->
 </div>
 
 
