--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
         alt="Logo Biblioteca" 
-        style="width: 200px; height: auto;" /> <!-- Primo logo con larghezza fissa -->
+        style="width: 200px; height: auto;" />
     <img 
         src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
         alt="Logo Morante" 
-        style="width: 1500px; height: auto;" /> <!-- Secondo logo con larghezza forzata -->
+        style="width: 1200px; height: auto;" />
 </div>
 
 
