--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             
             <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl">
-                Donazione alla Biblioteca Elsa Morante
+                Donazione di libri
             </h1>
         </div>
 
