--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 
             
-            <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl">
-                Donazione di libri
-            </h1>
+            <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl mt-10">
+    Donazione di libri
+</h1>
+
         </div>
 
         <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r">
