--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body class="bg-gray-100 text-gray-800 leading-relaxed p-5">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
-        <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
+        
+        <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4 mt-16">
+
 
 
           <img 
