--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donazione di libri</title>
+    <title>Donazione alla Biblioteca Elsa Morante</title>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -12,7 +12,7 @@
         <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
 
 
-          <img 
+         <img 
     src="loghi.png" 
     alt="Logo Biblioteca" 
     class="h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
@@ -109,7 +109,7 @@
             let isValid = true;
 
             if (input.hasAttribute('required') && !value) {
-                showError(input, Il campo ${input.previousElementSibling.textContent.replace(':', '')} è obbligatorio);
+                showError(input, `Il campo ${input.previousElementSibling.textContent.replace(':', '')} è obbligatorio`);
                 isValid = false;
             } else {
                 switch (input.id) {
@@ -150,7 +150,7 @@
                 const currentYear = new Date().getFullYear();
                 const year = parseInt(value);
                 if (value && (!Number.isInteger(year) || year < 1400 || year > currentYear)) {
-                    showError(input, L'anno deve essere un numero compreso tra 1400 e ${currentYear});
+                    showError(input, `L'anno deve essere un numero compreso tra 1400 e ${currentYear}`);
                     isValid = false;
                 }
             } else if (input.classList.contains('book-isbn')) {
@@ -172,12 +172,12 @@
             bookDiv.className = 'book-entry relative bg-gray-50 border border-gray-200 rounded-lg p-5 mb-5 hover:transform hover:-translate-y-1 transition-transform';
             bookCount++;
 
-            bookDiv.innerHTML = 
+            bookDiv.innerHTML = `
                 <div class="flex justify-between items-center mb-4">
                     <span class="book-counter flex items-center justify-center w-6 h-6 rounded-full text-white font-semibold text-sm" style="background-color: rgb(34, 197, 94)">${bookCount}</span>
-                    ${bookCount > 1 ? 
+                    ${bookCount > 1 ? `
                         <button type="button" class="px-3 py-2 text-red-600 hover:text-red-700 font-bold text-2xl" onclick="removeBook(this)">✖</button>
-                     : ''}
+                    ` : ''}
                 </div>
                 
                 <div class="mb-5">
@@ -205,7 +205,7 @@
                 </div>
                 
                 <button type="button" class="w-full px-4 py-3 bg-green-500 text-white rounded hover:bg-green-600 transition-colors mt-2" onclick="createBookEntry()">+ Aggiungi Libro</button>
-            ;
+            `;
 
             const inputs = bookDiv.querySelectorAll('input');
             inputs.forEach(input => {
@@ -328,11 +328,11 @@
             }
 
             const formattedBooks = books.map((book, index) => 
-                <em>Libro ${index + 1}:</em><br> +
-                <strong>Titolo/Autore:</strong> ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}<br> +
-                <strong>Editore:</strong> ${book.publisher}<br> +
-                <strong>Anno:</strong> ${book.year}<br> +
-                <strong>ISBN:</strong> ${book.isbn}<br><br>
+                `<em>Libro ${index + 1}:</em><br>` +
+                `<strong>Titolo/Autore:</strong> ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}<br>` +
+                `<strong>Editore:</strong> ${book.publisher}<br>` +
+                `<strong>Anno:</strong> ${book.year}<br>` +
+                `<strong>ISBN:</strong> ${book.isbn}<br><br>`
             ).join('');
 
             const submitButton = event.target.querySelector('button[type="submit"]');
@@ -345,7 +345,7 @@
                     'template_s1jmd7r', 
                     {
                         to_email: 'bibliotecamorante@gmail.com',
-                        from_name: ${nome} ${cognome},
+                        from_name: `${nome} ${cognome}`,
                         from_email: email,
                         tessera: tessera || 'Non specificata',
                         telefono: telefono || 'Non specificato',
@@ -371,7 +371,7 @@
 
             } catch (error) {
                 console.error('Errore dettagliato durante l\'invio:', error);
-                alert(Si è verificato un errore durante l'invio: ${error.text || error.message});
+                alert(`Si è verificato un errore durante l'invio: ${error.text || error.message}`);
             } finally {
                 submitButton.disabled = false;
                 submitButton.textContent = 'Invia Donazione';
