--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
 
 
-         <img 
+      <img 
     src="loghi.png" 
     alt="Logo Biblioteca" 
-    class="h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
+    class="h-24 sm:h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
+
 
 
             
