--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img 
     src="loghi.png" 
     alt="Logo Biblioteca" 
-    class="h-24 sm:h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
+    class="h-24 sm:h-auto w-auto object-contain mb-3 md:h-16 sm:h-12" />
 
 
 
