--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img 
     src="loghi.png" 
     alt="Logo Biblioteca" 
-    class="h-32 sm:h-48 md:h-56 lg:h-64 xl:h-72 w-auto object-contain mb-3" />
+    class="h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
 
 
 
