--- a/termini.html
+++ b/termini.html
@@ -292,7 +292,7 @@
               Il materiale non idoneo per la biblioteca potrà essere destinato ad altri utilizzi che la biblioteca riterrà opportuni (donazione, scambi o bookcrossing), senza alcun vincolo per quest'ultima.
            </p>
 
-           <h2>Invio del materiale</h2>
+           <h2>Consegna del materiale</h2>
            <p>
                Il materiale offerto in dono si potrà consegnare al <em>Front-Office</em> nei giorni dal lunedì al venerdì dalle ore 09:00 alle ore 18:30 ed il sabato dalle ore 09:00 alle 13:00. 
            </p>
