--- a/termini.html
+++ b/termini.html
@@ -299,8 +299,8 @@
 
            <h2>Ulteriori Informazioni</h2>
            <p>
-               Email per la Sezione Adulti: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a><br>
-               Email per la Sezione Ragazzi: <a href="mailto:f.ferri@bibliotechediroma.it">f.ferri@bibliotechediroma.it</a>
+               Sezione Adulti: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a><br>
+               Sezione Ragazzi: <a href="mailto:f.ferri@bibliotechediroma.it">f.ferri@bibliotechediroma.it</a>
            </p>
        </section>
    </main>
