--- a/termini.html
+++ b/termini.html
@@ -294,7 +294,7 @@
 
            <h2>Consegna del materiale</h2>
            <p>
-               Il materiale offerto in dono si potrà consegnare al <em>Front-Office</em> nei giorni dal lunedì al venerdì dalle ore 09:00 alle ore 18:30 ed il sabato dalle ore 09:00 alle 13:00. 
+               Il materiale offerto in dono si potrà consegnare al <em>Front-Office</em> nei seguenti orari: dal lunedì al venerdì, dalle 09:00 alle 18:30, e il sabato dalle 09:00 alle 13:00. 
            </p>
 
            <h2>Ulteriori Informazioni</h2>
