--- a/index.html
+++ b/index.html
@@ -141,33 +141,42 @@
             return isValid;
         }
 
+
+
         function validateBookField(input) {
-            const value = input.value.trim();
-            let isValid = true;
+    const value = input.value.trim();
+    let isValid = true;
 
-            if (input.hasAttribute('required') && !value) {
-                showError(input, 'Questo campo è obbligatorio');
-                isValid = false;
-            } else if (input.classList.contains('book-year')) {
-                const currentYear = new Date().getFullYear();
-                const year = parseInt(value);
-                if (value && (!Number.isInteger(year) || year < 1400 || year > currentYear)) {
-                    showError(input, `L'anno deve essere un numero compreso tra 1400 e ${currentYear}`);
-                    isValid = false;
-                }
-            } else if (input.classList.contains('book-isbn')) {
-                if (value && !/^(?:\d{10}|\d{13})$/.test(value)) {
-                    showError(input, 'ISBN deve essere di 10 o 13 cifre');
-                    isValid = false;
-                }
-            }
+    if (input.hasAttribute('required') && !value) {
+        showError(input, 'Questo campo è obbligatorio');
+        isValid = false;
+    } else if (input.classList.contains('book-year')) {
+        const currentYear = new Date().getFullYear();
+        const year = parseInt(value);
 
-            if (isValid) {
-                hideError(input);
-            }
-
-            return isValid;
+        if (!value || isNaN(year)) {
+            showError(input, 'Inserire un anno valido (numerico)');
+            isValid = false;
+        } else if (value.length > 4 || year < 1400 || year > currentYear) {
+            showError(input, `L'anno deve essere numerico e compreso tra 1400 e ${currentYear}`);
+            isValid = false;
         }
+    } else if (input.classList.contains('book-isbn')) {
+        if (value && !/^(?:\d{10}|\d{13})$/.test(value)) {
+            showError(input, 'ISBN deve essere di 10 o 13 cifre');
+            isValid = false;
+        }
+    }
+
+    if (isValid) {
+        hideError(input);
+    }
+
+    return isValid;
+}
+
+
+        
 
         function createBookEntry() {
             const bookDiv = document.createElement('div');
