--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             
 <!-- Inside the submit event listener, update the formattedBooks definition: -->
             const formattedBooks = books.map((book, index) => 
-                `<br><strong>Libro ${index + 1}:</strong><br>` +
+                `<br><em>Libro ${index + 1}:</em><br>` +
                 `<table style="width:100%; border-collapse: collapse; margin-bottom: 10px; table-layout: fixed;">
                     <colgroup>
                         <col style="width: 100px;">
