--- a/index.html
+++ b/index.html
@@ -429,7 +429,17 @@
     } catch (error) {
         console.error('Errore dettagliato durante l\'invio:', error);
         showGlobalErrorPopup(`Si è verificato un errore durante l'invio: ${error.text || error.message}`);
-    } finally {
+
+catch (error) {
+    console.error('Errore dettagliato durante l\'invio:', error);
+    const errorMessage = error.text || error.message || 'Errore sconosciuto durante l\'invio';
+    showGlobalErrorPopup(`Si è verificato un errore durante l'invio: ${errorMessage}`);
+    
+    // Optional: Log more details about the error
+    if (error.status) {
+        console.error('Status:', error.status);
+    }
+}   finally {
         submitButton.disabled = false;
         submitButton.textContent = 'Invia Donazione';
     }
