--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ function showGlobalErrorPopup(message) {
 
     // Create a popup div
     const popup = document.createElement('div');
-    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded z-50 shadow-lg';
+    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded z-50 shadow-lg w-96'; // Increased width (w-96)
     popup.innerHTML = `
         <strong class="font-bold">Errore!</strong>
         <span class="block sm:inline">${message}</span>
-        <span class="absolute top-2 right-2 px-4 py-3 close-btn" style="cursor: pointer;">&times;</span>
+        <span class="absolute top-2 right-2 text-xl font-bold close-btn" style="cursor: pointer;">&times;</span>
     `;
 
     // Add close functionality
@@ -118,6 +118,7 @@ function showGlobalErrorPopup(message) {
 
     document.body.appendChild(popup);
 }
+
 
 
 
