--- a/index.html
+++ b/index.html
@@ -96,18 +96,11 @@ function showGlobalErrorPopup(message) {
 
     // Create a popup div
     const popup = document.createElement('div');
-    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded z-50 shadow-lg w-96'; // Increased width (w-96)
+    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded z-50 shadow-lg';
     popup.innerHTML = `
         <strong class="font-bold">Errore!</strong>
         <span class="block sm:inline">${message}</span>
-        <span class="absolute top-2 right-2 text-xl font-bold close-btn" style="cursor: pointer;">&times;</span>
     `;
-
-    // Add close functionality
-    const closeBtn = popup.querySelector('.close-btn');
-    closeBtn.addEventListener('click', () => {
-        document.body.removeChild(popup);
-    });
 
     // Auto-remove after 5 seconds
     setTimeout(() => {
