--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ function showSuccessPopup(message) {
                 <col style="width: auto;">
             </colgroup>
             <tr>
-                <td style="padding:5px; border:1px solid #ddd;"><strong>Tit/Aut:</strong></td>
+                <td style="padding:5px; border:1px solid #ddd;"><strong>Titolo:</strong></td>
                 <td style="padding:5px; border:1px solid #ddd;">${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}</td>
             </tr>
             <tr>
