--- a/termini.html
+++ b/termini.html
@@ -281,7 +281,7 @@
                </li>
                <li>
                    Clicca sul pulsante 
-                   <span style="color: var(--primary); font-weight: bold;">Invia Donazione</span> 
+                   <em>Invia Donazione</em> 
                    per trasmettere la tua richiesta alla biblioteca.
                </li>
            </ol>
