--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 <!-- Link to favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.png" type="image/png">
 
     
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
