--- a/termini.html
+++ b/termini.html
@@ -6,7 +6,7 @@
    <title>Termini e Condizioni - Donazione di Libri</title>
 
 <!-- Favicon -->
-   <link rel="icon" href="favicon.ico" type="image/x-icon">
+   <link rel="icon" href="favicon.png" type="image/png">
    
    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
