--- a/raccolta.html
+++ b/raccolta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Centri di raccolta per donazioni di libri e audiovisivi nella zona di Ostia e dintorni. Trova punti di raccolta e informazioni utili.">
-    <title>Centri di Raccolta Libri e Audiovisivi</title>
+    <title>Centri raccolta</title>
     <!-- Favicon -->
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -117,7 +117,18 @@
                 <h1 class="text-3xl font-bold main-title" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
             </div>
             
-           
+            <div class="bg-white shadow-md rounded-lg p-6 mb-6" style="display: none;">
+    <!-- Questo blocco è reso invisibile con display: none; Rimuovere questo stile per renderlo visibile di nuovo -->
+    <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Comunità La Forchetta</h2>
+    <p class="mb-2"><strong>Descrizione:</strong> Raccolta libri di ogni genere con ritiro a domicilio</p>
+    <p class="mb-2"><strong>Ubicazione:</strong> Banchetto ad Ostia in via Cardinal Ginnasi davanti al bar Polo Nord</p>
+    <p class="mb-2">
+        <strong>Contatti:</strong> 
+        <a href="http://comunita-la-forchetta.blogspot.com/" class="text-blue-500 hover:underline" target="_blank">Sito Web</a>
+    </p>
+    <p><strong>Telefono:</strong> 3204993136 (Antonio)</p>
+</div>
+
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
                 <p class="mb-2">
