--- a/raccolta.html
+++ b/raccolta.html
@@ -96,15 +96,19 @@
         align-items: center;
         color: #fff;
         background-color: var(--primary);
-        padding: 0.5rem 1rem;
-        border-radius: 5px;
+        padding: 0.5rem;
+        border-radius: 50%;
         text-decoration: none;
-        font-size: 1rem;
+        font-size: 1.5rem; /* Modificato per avere dimensioni più grandi */
         transition: background-color 0.3s;
+        width: 50px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
     }
 
     .icon-button i {
-        margin-right: 0.5rem;
+        font-size: 1.5rem; /* Modificato per avere le icone più grandi */
     }
 
     .icon-button:hover {
@@ -144,10 +148,10 @@
     <!-- Navigazione aggiunta sopra il titolo -->
     <div class="navigation-icons">
         <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Torna indietro" id="navback" class="icon-button">
-            <i class="fas fa-arrow-left"></i> Torna indietro
+            <i class="fas fa-arrow-left"></i>
         </a>
         <a href="https://www.bibliotechediroma.it/opac/.do" title="Vai alla pagina principale" id="navhome" class="icon-button">
-            <i class="fas fa-home"></i> Vai alla pagina principale
+            <i class="fas fa-home"></i>
         </a>
     </div>
 
