--- a/raccolta.html
+++ b/raccolta.html
@@ -87,65 +87,37 @@
     .navigation-icons {
         display: flex;
         justify-content: flex-start; /* Allineamento a sinistra */
-        gap: 1rem;
-        margin-top: 1rem; /* Aggiunto margine superiore per spostare un po' più in basso */
-        margin-left: 2rem; /* Allineamento a sinistra */
+        gap: 2rem; /* Spazio maggiore tra le icone */
+        align-items: center;
+        margin-top: 0.5rem;
+        margin-left: 10%; /* Spostato per centrare rispetto al titolo */
     }
 
     .icon-button {
-        display: flex;
-        align-items: center;
         color: #fff;
-        background-color: var(--primary);
-        padding: 0.3rem;
-        border-radius: 50%;
         text-decoration: none;
-        font-size: 0.8rem; /* Ridotto per dimezzare le icone */
+        font-size: 1.5rem;
         transition: background-color 0.3s;
-        width: 40px;
-        height: 40px;
-        justify-content: center;
-        align-items: center;
     }
 
-    .icon-button i {
-        font-size: 1.2rem; /* Modificato per rendere le icone più piccole */
+    .back-button {
+        font-size: 2rem; /* Grandezza maggiore per la freccia */
+        color: red; /* Rosso */
     }
 
-    .icon-button:hover {
-        background-color: #7e0a1b;
+    .home-button img {
+        width: 20px; /* Icona più piccola */
+        height: auto;
     }
 
-    .icon-button:focus {
-        outline: none;
-        background-color: #7e0a1b;
+    /* Effetti di hover per la freccia e l'icona */
+    .back-button:hover, .home-button:hover {
+        color: #7e0a1b; /* Scuro al passaggio del mouse */
     }
 
-    /* Aggiunta di una modifica per l'icona della casa */
-    .fa-home {
-        position: relative;
+    .home-button img:hover {
+        opacity: 0.8; /* Diminuisce l'opacità dell'icona home al passaggio del mouse */
     }
-
-    .fa-home:before {
-        content: "\f015"; /* Codice per l'icona di casa */
-        color: #fff;
-    }
-
-    .fa-home {
-        color: #fff;
-    }
-
-    .fa-home:after {
-        content: "\00a0"; /* Aggiungi uno spazio bianco sotto il tetto */
-        position: absolute;
-        top: 12px;
-        left: 3px;
-        width: 30px;
-        height: 5px;
-        background-color: #fff;
-        border-radius: 50%;
-    }
-
 </style>
 
 </head>
@@ -171,13 +143,13 @@
         </div>
     </header>
 
-    <!-- Navigazione aggiunta sopra il titolo -->
+    <!-- Navigazione sopra il titolo -->
     <div class="navigation-icons">
-        <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Torna indietro" id="navback" class="icon-button">
-            <i class="fas fa-chevron-right"></i> <!-- Cambiato da freccia sinistra a freccia destra -->
+        <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Torna indietro" id="navback" class="icon-button back-button">
+            &gt; <!-- Freccia di ritorno come segno ">" -->
         </a>
-        <a href="https://www.bibliotechediroma.it/opac/.do" title="Vai alla pagina principale" id="navhome" class="icon-button">
-            <i class="fas fa-home"></i> <!-- Icona casa modificata con spazio bianco -->
+        <a href="https://www.bibliotechediroma.it/opac/.do" title="Vai alla pagina principale" id="navhome" class="icon-button home-button">
+            <img src="https://raw.githubusercontent.com/user/repository/main/home.png" alt="Home"> <!-- Immagine da GitHub -->
         </a>
     </div>
 
